WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287098
REGRESSION (
288873@main
): [ iOS ] fast/forms/switch/click-animation-twice-fast.html is a constant timeout.
https://bugs.webkit.org/show_bug.cgi?id=287098
Summary
REGRESSION (288873@main): [ iOS ] fast/forms/switch/click-animation-twice-fas...
Yasmin Karimi
Reported
2025-02-05 10:49:08 PST
fast/forms/switch/click-animation-twice-fast.html This test is constantly timing out on iOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fswitch%2Fclick-animation-twice-fast.html
TEXT DIFF: AccessDeniedAccess DeniedQ89PE3VW75DGE524spehrhixaS89oM5KDFOTGyf3f0ZAdMq15GmBS/NfFE+a/bVvD9J8F62i6vWAZv+NMggORCG1H0g= DIFF URL:
https://ews-build.s3-us-west-2.amazonaws.com/iOS-18-Simulator-WK2-Tests-EWS/99317ff0-3414/fast/forms/switch/click-animation-twice-fast-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this issue on the iOS 18.2 simulator at ToT using the following command: run-webkit-tests --ios-simulator fast/forms/switch/click-animation-twice-fast.html --iterations 10 However, locally, this resulted in flaky image-only failures. REGRESSION: According to the dashboard, the regression range appears to be between
288854@main
and
288876@main
, however, the issue reproduces on a local environment when testing commits earlier than
288854@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-05 10:49:58 PST
<
rdar://problem/144245651
>
EWS
Comment 2
2025-02-05 12:01:38 PST
Test gardening commit
289886@main
(67f84fd0d44d): <
https://commits.webkit.org/289886@main
> Reviewed commits have been landed. Closing PR #40071 and removing active labels.
Robert Jenner
Comment 3
2025-02-05 17:44:43 PST
I was able to reproduce this timeout, and track down a regression point. It repo's on iOS 18 Production tot running the test as follows: run-webkit-tests --ios-simulator fast/forms/switch/click-animation-twice-fast.html --child-process=1 I was able to reproduce it as far back as
288873@main
, but when I went to reproduce on the closest available build before that one (e.g.
288870@main
) it no longer wasn't a constant timeout, or a timeout at all. Looking at the changes around that area, and given what this test is supposed to do, I'm fairly confident that:
https://commits.webkit.org/288873@main
is where this regressed, and broke this test.
Abrar Rahman Protyasha
Comment 4
2025-02-06 16:37:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40171
EWS
Comment 5
2025-02-10 03:15:24 PST
Committed
290149@main
(32d011633545): <
https://commits.webkit.org/290149@main
> Reviewed commits have been landed. Closing PR #40171 and removing active labels.
EWS
Comment 6
2025-02-11 12:22:01 PST
Committed
289651.89@safari-7621-branch
(07b4e1e385b0): <
https://commits.webkit.org/289651.89@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2557 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug