Cherry-pick 32d011633545. rdar://144533674

Unreviewed, reverting 288873@main (d1f55d9bf83b)
    https://bugs.webkit.org/show_bug.cgi?id=287098
    rdar://144245651

    REGRESSION (288873@main): [ iOS ] fast/forms/switch/click-animation-twice-fast.html is a constant timeout.

    Reverted change:

        iOS Safari "click" events have the "mouse" pointerType when triggered from touch
        https://bugs.webkit.org/show_bug.cgi?id=282988
        rdar://139828481
        288873@main (d1f55d9bf83b)

    Canonical link: https://commits.webkit.org/290149@main

Canonical link: https://commits.webkit.org/289651.89@safari-7621-branch